# Big-Number

./: CMakeLists.txt  CMakePresets.json
benchmarks/: CMakeLists.txt  benchmark_big_number.cpp  benchmark_bit_deque.cpp
include/: big_number.h  bit_deque.h
srs/: CMakeLists.txt  bit_deque.cpp  main.cpp
srs/big_number/: assignment_operators.cpp  big_number.cpp  binary_arithmetic_operators.cpp  bitwise_operators.cpp  relational_operators.cpp  rounding_functions.cpp  unary_arithmetic_operators.cpp
tests/: CMakeLists.txt  test_bit_deque.cpp
tests/big_number/: test_assignment_operators.cpp  test_big_number.cpp  test_binary_arithmetic_operators.cpp  test_bitwise_operators.cpp  test_relational_operators.cpp  test_rounding_functions.cpp  test_unary_arithmetic_operators.cpp
